--- a/layouts/partials/social.html
+++ b/layouts/partials/social.html
@@ -1,33 +1,5 @@
 <section class="my-4">
   <ul class="flex justify-center gap-4">
-    {{ with .Site.Params.homepage.social.twitter }}
-    <li>
-      <a
-        href="{{.}}"
-        target="_blank"
-        rel="noopener"
-        aria-label="Twitter"
-        class="p-2 inline-block rounded-full border border-gray-300 text-gray-300 hover:text-gray-800 hover:border-gray-800 cursor-pointer transition-colors dark:border-gray-600 dark:text-gray-600 dark:hover:border-gray-300 dark:hover:text-gray-300"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="20"
-          height="20"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <path
-            d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z"
-          />
-        </svg>
-      </a>
-    </li>
-    {{ end }}
     {{ with .Site.Params.homepage.social.linkedin }}
     <li>
       <a
@@ -35,7 +7,20 @@
         target="_blank"
         rel="noopener"
         aria-label="LinkedIn"
-        class="p-2 inline-block rounded-full border border-gray-300 text-gray-300 hover:text-gray-800 hover:border-gray-800 cursor-pointer transition-colors dark:border-gray-600 dark:text-gray-600 dark:hover:border-gray-300 dark:hover:text-gray-300"
+        class="
+          p-2
+          inline-block
+          rounded-full
+          border border-gray-300
+          text-gray-300
+          hover:text-gray-800 hover:border-gray-800
+          cursor-pointer
+          transition-colors
+          dark:border-gray-600
+          dark:text-gray-600
+          dark:hover:border-gray-300
+          dark:hover:text-gray-300
+        "
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -57,15 +42,27 @@
         </svg>
       </a>
     </li>
-    {{ end }}
-    {{ with .Site.Params.homepage.social.github }}
+    {{ end }} {{ with .Site.Params.homepage.social.github }}
     <li>
       <a
         href="{{.}}"
         target="_blank"
         rel="noopener"
         aria-label="GitHub"
-        class="p-2 inline-block rounded-full border border-gray-300 text-gray-300 hover:text-gray-800 hover:border-gray-800 cursor-pointer transition-colors dark:border-gray-600 dark:text-gray-600 dark:hover:border-gray-300 dark:hover:text-gray-300"
+        class="
+          p-2
+          inline-block
+          rounded-full
+          border border-gray-300
+          text-gray-300
+          hover:text-gray-800 hover:border-gray-800
+          cursor-pointer
+          transition-colors
+          dark:border-gray-600
+          dark:text-gray-600
+          dark:hover:border-gray-300
+          dark:hover:text-gray-300
+        "
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -85,46 +82,77 @@
         </svg>
       </a>
     </li>
-    {{ end }}
-    {{ with .Site.Params.homepage.social.medium }}
+    {{ end }} {{ with .Site.Params.homepage.social.devpost }}
     <li>
       <a
         href="{{.}}"
         target="_blank"
         rel="noopener"
-        aria-label="Medium"
-        class="p-2 inline-block rounded-full border border-gray-300 text-gray-300 hover:text-gray-800 hover:border-gray-800 cursor-pointer transition-colors dark:border-gray-600 dark:text-gray-600 dark:hover:border-gray-300 dark:hover:text-gray-300"
+        aria-label="Devpost"
+        class="
+          p-2
+          inline-block
+          rounded-full
+          border border-gray-300
+          text-gray-300
+          hover:text-gray-800 hover:border-gray-800
+          cursor-pointer
+          transition-colors
+          dark:border-gray-600
+          dark:text-gray-600
+          dark:hover:border-gray-300
+          dark:hover:text-gray-300
+        "
       >
         <svg
-          xmlns="http://www.w3.org/2000/svg"
           width="20"
           height="20"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
+          viewBox="0 0 20 20"
           fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
+          xmlns="http://www.w3.org/2000/svg"
         >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <rect x="4" y="4" width="16" height="16" rx="2" />
-          <path d="M8 9h1l3 3l3 -3h1" />
-          <line x1="8" y1="15" x2="10" y2="15" />
-          <line x1="14" y1="15" x2="16" y2="15" />
-          <line x1="9" y1="9" x2="9" y2="15" />
-          <line x1="15" y1="9" x2="15" y2="15" />
+          <path
+            d="M11.1875 1.40729L16.8478 4.67524C17.5826 5.09949 18.0353 5.88354 18.0353 6.73205V13.2679C18.0353 14.1165 17.5826 14.9005 16.8478 15.3248L11.1875 18.5927C10.4527 19.017 9.54733 19.017 8.8125 18.5927L3.15225 15.3248C2.41742 14.9005 1.96475 14.1165 1.96475 13.2679V6.73205C1.96475 5.88354 2.41742 5.09949 3.15225 4.67524L8.8125 1.40729C9.54733 0.983038 10.4527 0.983038 11.1875 1.40729Z"
+            stroke="currentColor"
+            stroke-width="1.25"
+          />
+          <path
+            d="M8.5 6.5V13.5"
+            stroke="currentColor"
+            stroke-width="1.25"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          />
+          <path
+            d="M8.5 6.5H10.4898C12.2405 6.85982 12.5975 7.70844 12.4795 10C12.5388 12.2939 12.2172 13.1824 10.4898 13.5H8.5"
+            stroke="currentColor"
+            stroke-width="1.25"
+            stroke-linecap="round"
+          />
         </svg>
       </a>
     </li>
-    {{ end }}
-    {{ with .Site.Params.homepage.social.reddit }}
+    {{ end }} {{ with .Site.Params.homepage.social.reddit }}
     <li>
       <a
         href="{{.}}"
         target="_blank"
         rel="noopener"
         aria-label="Medium"
-        class="p-2 inline-block rounded-full border border-gray-300 text-gray-300 hover:text-gray-800 hover:border-gray-800 cursor-pointer transition-colors dark:border-gray-600 dark:text-gray-600 dark:hover:border-gray-300 dark:hover:text-gray-300"
+        class="
+          p-2
+          inline-block
+          rounded-full
+          border border-gray-300
+          text-gray-300
+          hover:text-gray-800 hover:border-gray-800
+          cursor-pointer
+          transition-colors
+          dark:border-gray-600
+          dark:text-gray-600
+          dark:hover:border-gray-300
+          dark:hover:text-gray-300
+        "
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -146,36 +174,6 @@
           <circle cx="9" cy="13" r=".5" fill="currentColor" />
           <circle cx="15" cy="13" r=".5" fill="currentColor" />
           <path d="M10 17c.667 .333 1.333 .5 2 .5s1.333 -.167 2 -.5" />
-        </svg>
-      </a>
-    </li>
-    {{ end }}
-    {{ with .Site.Params.homepage.social.dribbble }}
-    <li>
-      <a
-        href="{{.}}"
-        target="_blank"
-        rel="noopener"
-        aria-label="Medium"
-        class="p-2 inline-block rounded-full border border-gray-300 text-gray-300 hover:text-gray-800 hover:border-gray-800 cursor-pointer transition-colors dark:border-gray-600 dark:text-gray-600 dark:hover:border-gray-300 dark:hover:text-gray-300"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-brand-dribbble"
-          width="20"
-          height="20"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-          <circle cx="12" cy="12" r="9" />
-          <path d="M9 3.6c5 6 7 10.5 7.5 16.2" />
-          <path d="M6.4 19c3.5 -3.5 6 -6.5 14.5 -6.4" />
-          <path d="M3.1 10.75c5 0 9.814 -.38 15.314 -5" />
         </svg>
       </a>
     </li>
