Changing templates to meet my requirements

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <nav class="flex items-center justify-between flex-wrap">
     <div class="flex gap-2 items-center">
       {{ with .Site.Params.authorEmail}}
-      <a href="mailto:{{.}}" aria-label="EMail">
+      <a href="mailto:{{.}}" aria-label="Email">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="20"
@@ -25,15 +25,23 @@
       </a>
     </div>
 
+    <!-- Nav Menu -->
     <ul id="nav-menu" class="flex w-auto mt-0 space-x-2">
       {{ with .Site.GetPage "/about" }}
       <li>
-        <a href="{{ .Permalink }}" class="hover:text-blue-800 dark:hover:text-blue-300">{{ .Title }}</a>
+        <a
+          href="{{ .Permalink }}"
+          class="hover:text-blue-800 dark:hover:text-blue-300"
+          >{{ .Title }}</a
+        >
       </li>
-      {{ end }}
-      {{ with .Site.GetPage "/blog" }}
+      {{ end }} {{ with .Site.GetPage "/blog" }}
       <li>
-        <a href="{{ .Permalink }}" class="hover:text-blue-800 dark:hover:text-blue-300">{{ .Title }}</a>
+        <a
+          href="{{ .Permalink }}"
+          class="hover:text-blue-800 dark:hover:text-blue-300"
+          >{{ .Title }}</a
+        >
       </li>
       {{ end }}
     </ul>
