--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
   {{- partial "hero.html" . -}}
-  {{- partial "codepen-gallery.html" . -}}
+  {{- partial "project-gallery.html" . -}}
   {{- partial "resume.html" . -}}
   {{- partial "contact-cta.html" . -}}
   {{- partial "social.html" . -}}
