--- a/layouts/partials/resume.html
+++ b/layouts/partials/resume.html
@@ -1,14 +1,16 @@
 <section class="my-4 max-w-5xl mx-auto">
   <div class="text-3xl font-bold mb-4">Experience</div>
-  <hr class="mb-4" />
+  <hr class="mb-8" />
 
   <div class="grid gap-4">
     <!-- Work Experience -->
     <div>
       <div class="text-2xl font-semibold mb-4">Work Experience</div>
-      {{ range .Site.Params.homepage.resume.work}}
-      <div class="mb-4">
-        <div class="text-xl font-bold my-1">{{.name}}</div>
+      {{ range .Site.Params.homepage.resume.work }}
+      <div class="mb-6">
+        <div class="text-xl font-bold my-1">
+          <a href="{{.website}}">{{.name}}</a>
+        </div>
         <p class="text-lg my-1 font-light">{{.role}}</p>
         <p class="text-gray-500 my-1">{{.duration}}</p>
         {{ range $index, $val := .details }}
@@ -21,27 +23,50 @@
     </div>
     <hr />
     <!-- Skills -->
+    {{ with .Site.Params.homepage.resume.skills }}
     <div>
       <div class="text-2xl font-semibold mb-4">Skills</div>
-      {{ with .Site.Params.homepage.resume.skills }}
-        {{ range $index, $val := .languages}}
-        <div class="font-light my-2">{{.}}</div>
-        {{end}}
 
-      {{ end }}
+      <!-- Languages -->
+      <div class="text-xl font-bold my-4">Languages</div>
+      <div class="grid grid-flow-row grid-cols-6 gap-4">
+        {{ range $index, $val := .languages}}
+        <div class="font-light my-1 text-center">{{.}}</div>
+        {{ end }}
+      </div>
+
+      <!-- Technologies -->
+      <div class="text-xl font-bold my-4">Technologies/Frameworks</div>
+      <div class="grid grid-flow-row grid-cols-6 gap-4">
+        {{ range $index, $val := .technologies}}
+        <div class="font-light my-1 text-center">{{.}}</div>
+        {{ end }}
+      </div>
+
+      <!-- Concepts -->
+      <div class="text-xl font-bold my-4">Concepts</div>
+      <div class="grid grid-flow-row grid-cols-6 gap-4">
+        {{ range $index, $val := .concepts}}
+        <div class="font-light my-1 text-center">{{.}}</div>
+        {{ end }}
+      </div>
     </div>
     <hr />
-    <!-- Courses -->
+    {{end }}
+
+    <!-- Extracurriculars -->
+    {{ with .Site.Params.homepage.resume.extracurriculars }}
     <div>
-      <div class="text-2xl font-semibold mb-4">Courses</div>
-      {{ range .Site.Params.homepage.resume.courses}}
+      <div class="text-2xl font-semibold mb-4">Extracurriculars</div>
+      {{ range .Site.Params.homepage.resume.extracurriculars}}
       <div>
         <div class="text-xl font-bold my-2">{{.name}}</div>
-        <p class="my-1 font-light">by {{.provider}}</p>
+        <p class="my-1 font-light">{{.provider}}</p>
         <p class="text-gray-500 my-1">{{.duration}}</p>
       </div>
       {{ end }}
     </div>
     <hr />
+    {{ end }}
   </div>
 </section>
