Added copyright to footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,5 @@
 <footer class="w-full text-center p-4 text-xs text-gray-400">
+  <p class="my-1">{{ .Site.Params.copyright }}</p>
   <p>
     Built with
     <a
