--- a/layouts/partials/resume.html
+++ b/layouts/partials/resume.html
@@ -1,5 +1,5 @@
-<section class="my-4 max-w-5xl mx-auto">
-  <div class="text-3xl font-bold mb-4">Experience</div>
+<section class="my-4 max-w-5xl mx-auto mb-8">
+  <div class="text-4xl md:text-5xl font-bold mb-4">Experience</div>
   <hr class="mb-8" />
 
   <div class="grid gap-4">
