--- a/layouts/partials/contact-cta.html
+++ b/layouts/partials/contact-cta.html
@@ -1,7 +1,14 @@
 <section class="my-16 max-w-2xl mx-auto">
   <div class="text-4xl font-bold text-center">
     <a
-      class="text-5xl text-blue-400 hover:text-blue-ª00"
+      class="
+        text-5xl 
+        text-blue-400
+        transform
+        transition
+        duration-500
+        hover:text-blue-500
+      "
       href="mailto:{{.Site.Params.authorEmail}}"
       >Let's chat 📨</a
     >
