Changes to the site title, make links target blank

--- a/layouts/partials/project-gallery.html
+++ b/layouts/partials/project-gallery.html
@@ -37,7 +37,7 @@
 
     <!-- The preview image and link -->
     <div class="w-full my-2 md:w-2/3 md:ml-4 md:pl-2 md:py-2 md:my-4">
-      <a href="{{$val.link}}">
+      <a href="{{$val.link}}" target="_blank">
         <img
           class="
             object-contain
@@ -50,6 +50,7 @@
             duration-500
             md:hover:scale-105 md:hover:shadow-2xl
           "
+          loading="lazy"
           src="{{$val.preview}}"
           alt="{{$val.title}}"
         />
@@ -60,7 +61,7 @@
 
     <!-- The preview image and link -->
     <div class="w-full my-2 md:w-2/3 md:mr-4 md:pr-2 md:my-2 md:my-4">
-      <a href="{{$val.link}}">
+      <a href="{{$val.link}}" target="_blank">
         <img
           class="
             object-contain
@@ -73,6 +74,7 @@
             duration-500
             md:hover:scale-105 md:hover:shadow-2xl
           "
+          loading="lazy"
           src="{{$val.preview}}"
           alt="{{$val.title}}"
         />
