--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -1,7 +1,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>{{ block "title" . }} {{- .Title }} {{ end }}</title>
+  <title>{{ block "title" . }} {{- .Title }} - {{ .Site.Title -}}{{ end }}</title>
   {{- if .Description }}
   <meta name="description" content="{{ .Description }}" />
   {{ end -}} {{- if .Keywords }} <meta name="keywords" content="{{ delimit
