--- a/layouts/partials/project-gallery.html
+++ b/layouts/partials/project-gallery.html
@@ -1,15 +1,15 @@
-<section class="my-4 max-w-5xl mx-auto mb-8" style="min-height: 300px">
+<section class="my-4 max-w-6xl mx-auto mb-8" style="min-height: 300px">
   <div class="text-4xl md:text-5xl font-bold mb-2">Projects</div>
   {{ range $index, $val := .Site.Params.project }}
   <div
-    class="flex mb-8 md:mb-4 md:flex-row {{ if (modBool $index 2) }} flex-col {{ else }} flex-col-reverse {{ end }}"
+    class="flex mb-8 lg:mb-4 lg:flex-row {{ if (modBool $index 2) }} flex-col {{ else }} flex-col-reverse {{ end }}"
   >
     {{ if (modBool $index 2) }}
     <!-- The title, tags, and description -->
-    <div class="w-full md:w-1/3 md:flex-grow md:my-4">
+    <div class="w-full lg:w-1/3 lg:flex-grow lg:my-4">
       <div class="text-2xl my-1">{{ $val.title }}</div>
       <div class="flex flex-row flex-wrap">
-        {{ range .tags }}
+        {{ range sort .tags "value" "asc"}}
 
         <!-- The tags -->
         <span
@@ -36,7 +36,7 @@
     </div>
 
     <!-- The preview image and link -->
-    <div class="w-full my-2 md:w-2/3 md:ml-4 md:pl-2 md:py-2 md:my-4">
+    <div class="w-full my-2 lg:w-2/3 lg:ml-4 lg:pl-2 lg:py-2 lg:my-4">
       <a href="{{$val.link}}" target="_blank">
         <img
           class="
@@ -60,7 +60,7 @@
     {{ else }}
 
     <!-- The preview image and link -->
-    <div class="w-full my-2 md:w-2/3 md:mr-4 md:pr-2 md:my-2 md:my-4">
+    <div class="w-full my-2 lg:w-2/3 lg:mr-4 lg:pr-2 lg:my-2 lg:my-4">
       <a href="{{$val.link}}" target="_blank">
         <img
           class="
@@ -81,10 +81,10 @@
       </a>
     </div>
     <!-- The title, tags, and description -->
-    <div class="w-full md:w-1/3 md:flex-grow md:my-4">
+    <div class="w-full lg:w-1/3 lg:flex-grow lg:my-4">
       <div class="text-2xl my-1">{{ $val.title }}</div>
       <div class="flex flex-row flex-wrap">
-        {{ range .tags }}
+        {{ range sort .tags "value" "asc"}}
 
         <!-- The tags -->
         <span
@@ -112,4 +112,5 @@
     {{ end }}
   </div>
   {{ end }}
+  <hr/>
 </section>
